# pve-imds

./: .gitignore  .golangci.yaml  .goreleaser.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  mise.toml
.github/: apt-packages.txt
.github/workflows/: build.yaml  release.yaml
cmd/imds-conformance-server/: main.go
cmd/netlink-recorder/: main.go
cmd/pve-imds/: main.go
cmd/xdp-packet-monitor/: go.mod  go.sum  main.go
cmd/xdp-packet-monitor/pkg/redirect/: gen.go  xdp_redirect.c  xdp_redirect.go  (+2 more)
internal/config/: config.go
internal/identity/: cache.go  filewatcher.go  filewatcher_integration_test.go  filewatcher_test.go  identity.go  identity_test.go  module.go  resolver.go
internal/iface/: iface.go  stack.go  stack_test.go  staticarp.go  staticarp_test.go
internal/imds/: imds.go  metadata.go  middleware.go  tree.go  tree_test.go  userdata.go  userdata_test.go
internal/imds/ec2/: handler.go  metadata.go  tree.go  tree_test.go
internal/imds/jwtsvid/: handler.go  handler_test.go  jwks.go  jwks_test.go  signer.go  signer_test.go
internal/imds/openstack/: handler.go  handler_test.go  metadata.go
internal/logging/: logging.go
internal/manager/: manager_test.go
internal/tapwatch/: tapwatch.go  tapwatch_test.go
internal/vmconfig/: parse.go  parse_test.go  types.go
internal/vmproc/: proc.go
internal/xdp/: staticarp.go  staticarp_test.go  xdp.go  xdp_redirect.c
release/scripts/deb/: postinstall.sh  preremove.sh
tests/conformance/: conftest.py  pyproject.toml  test_ec2_conformance.py  test_openstack_conformance.py
(+2 files in other folders)
